--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -154,11 +154,52 @@
           </form>
 
           <ul class="navbar-nav">
+            {% if user.is_authenticated %}
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="userDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <i class="fas fa-user-circle me-1"></i> {{ user.username }}
+              </a>
+              <ul
+                class="dropdown-menu dropdown-menu-end"
+                aria-labelledby="userDropdown"
+              >
+                <li>
+                  <a class="dropdown-item" href="{% url 'profile' %}">
+                    <i class="fas fa-user me-2"></i> My Profile
+                  </a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'password_change' %}">
+                    <i class="fas fa-key me-2"></i> Change Password
+                  </a>
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'logout' %}">
+                    <i class="fas fa-sign-out-alt me-2"></i> Logout
+                  </a>
+                </li>
+              </ul>
+            </li>
+            {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="/admin/logout/">
-                <i class="fas fa-sign-out-alt me-1"></i> Logout
+              <a class="nav-link" href="{% url 'login' %}">
+                <i class="fas fa-sign-in-alt me-1"></i> Login
               </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'register' %}">
+                <i class="fas fa-user-plus me-1"></i> Register
+              </a>
+            </li>
+            {% endif %}
           </ul>
         </div>
       </div>
